<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ContainerTemplate"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            style="@style/BackArrowButton">

        </ImageView>

        <TextView
            style="@style/TitleTextStyle"
            android:text="@string/text_settings"
            android:paddingLeft="16dp"
            android:layout_marginStart="12dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_settings_text"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsTextStyle"
            android:text="@string/text_dark_mode" />

        <Switch
            android:id="@+id/button_theme_switch"
            style="@style/DarkThemeSwitch"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_settings_text"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/share_button"
            style="@style/SettingsTextStyle"
            android:text="@string/text_share" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_share" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_settings_text"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/support_button"
            style="@style/SettingsTextStyle"
            android:text="@string/text_support" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_support" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_settings_text"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/agreement_button"
            style="@style/SettingsTextStyle"
            android:text="@string/text_user_agreement" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_arrow" />

    </LinearLayout>

</LinearLayout>
