<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/text_search"
        android:textColor="@color/black"
        android:textSize="@dimen/main_text_size"
        app:cornerRadius="@dimen/radius"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/padding_icon_size"
        app:iconTint="@color/black">

    </Button>

    <Button
            android:id="@+id/buttonMedia"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/text_mediateca"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/light_mode_media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_icon_size"
            app:iconTint="@color/black">

        </Button>

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="28dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/text_settings"
            android:textColor="@color/black"
            android:textSize="@dimen/main_text_size"
            app:cornerRadius="@dimen/radius"
            app:icon="@drawable/light_mode_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_icon_size"
            app:iconTint="@color/black">

        </Button>

</LinearLayout>